footer logo fix

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="row ending">
           
             <div class="col-6 aboutcomp">
-<div><img src="footerlogo.png" width="260px" height="66px"></div>
+<div><img src="images/footerlogo.png" width="260px" height="66px"></div>
 <div><p>Required honoured trifling eat pleasure man relation. Assurance yet bed was improving furniture man. Distrusts delighted Excuse few the remain highly feebly add people manner say. It high at my mind by roof.</p></div>
 <a href="#" target="blank"><img src="images/facebook.png" target="blank" width="10px" height="16px" /></a>
 <a href="#" target="blank"><img src="images/twitter.png" target="blank" width="16px" height="16px" /></a>
