--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
     
         <div class="hero-content bg">
-            <h6>FORr MILLIONS OF USERS</h6>
+            <h6>FOR MILLIONS OF USERS</h6>
             <h1>Powerful Digital <br>IT solutions Company</h1>
             <p>Afford planned account law instead. Heard new week even yet that. Incommode delightful so resolving son themselves do in listening.</p>
 			<!-- <a href="#" class="buttan">></a> -->
