Alert box added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="CSS/abovefooter.css">
 </head>
 <body>
+
+<script>
+window.alert("This website is configured for 90x zoom only.\nSo Please run the website in 90x zoom")
+</script>
+
     <header>
         <nav>
             <img src="images/Logo.png">
@@ -25,7 +30,7 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Portfolio</a></li>
             </ul>
-            <a href="#" target="blank" class="contact-button">Contact</a>
+            <a href="#" target="blank" id="demo" class="contact-button">Contact</a>
         </nav>
     </header>
 
