--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <h2>INFO FORM</h2>
             <p>Lorem Ipsum is simply dummy text of the printing <br>and typesetting industry. Contrary to popular belief</p>
             <form action="#">
-                <input type="text" name="name" placeholder="Name">
-                <input type="email" name="email" placeholder="Email">
+                <input type="text" name="name" required placeholder="Name">
+                <input type="email" name="email" required placeholder="Email">
                 <div class="select_box">
                 <select>
 					<option>Services</option>
@@ -285,8 +285,8 @@
             <h2>INFO FORM</h2>
             <p>Lorem Ipsum is simply dummy text of the printing <br>and typesetting industry. Contrary to popular belief</p>
             <form action="#">
-                <input type="text" name="name" placeholder="Name">
-                <input type="email" name="email" placeholder="Email">
+                <input type="text" name="name" required placeholder="Name">
+                <input type="email" name="email" required placeholder="Email">
                 <select>
 					<option>Services</option>
 					<option>test 2</option>
